--- a/package.json
+++ b/package.json
@@ -1,36 +1,26 @@
 {
-  "name": "vite-whiteboard",
+  "name": "whiteboard-app",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
-    "classnames": "^2.5.1",
-    "perfect-freehand": "^1.2.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.58.1",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2",
     "roughjs": "^4.6.6",
-    "tailwindcss": "^4.1.10",
-    "zustand": "^5.0.5"
+    "perfect-freehand": "^1.2.0",
+    "react-icons": "^5.2.1",
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "vite": "^6.3.5"
+    "tailwindcss": "^3.4.3",
+    "postcss": "^8.4.38",
+    "autoprefixer": "^10.4.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.2.11"
+  },
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   }
 }
